--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,5 +35,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
   </body>
 </html>
