new code push in logics

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -71,5 +71,6 @@
         console.error("Screen recording is not supported in this browser.");
       }
     </script> -->
+    <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
